--- a/circle.yml
+++ b/circle.yml
@@ -4,10 +4,9 @@ machine:
   php:
     version:
       5.6.5
-  environnement:
+  environment:
     WP_VERSION: latest
     CIRCLE_ENV: test
 
-dependencies:
-  test:
-    - casperjs test tests/
+test:
+  - casperjs test tests/
